# AfpyLogs

./: .gitignore  README.md  app.py  buildout.cfg  config.py  deploy.ini  requirements.txt  server.py  setup.cfg  setup.py  template.html
afpylogs/: app.py  parser.py  template.html  transcript.js  utils.py
