[metadata]
name = AfpyLogs
url = https://github.com/AFPy/AfpyLogs
version = file: afpylogs/VERSION
description = Web view of IRC logs from #python-fr channel on Freenode
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU AFFERO GENERAL PUBLIC LICENSE version 3 or later
license_file = LICENSE
author = Mindiell
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
project_urls =
    Documentation = https://github.com/AFPy/AfpyLogs/blob/master/README.md

[options]
packages = find:
setup_requires = pytest_runner
python_requires = >= 3.8
install_requires =
    flask
    gunicorn

[options.extras_require]
test =
    pytest-black
    pytest-isort
    pytest

[bdist_wheel]
python-tag = py3

[tool:pytest]
addopts = --isort --black

[isort]
default_section = THIRDPARTY
multi_line_output = 3
